added yaml headers

--- a/contents/building-blocks/lists.html
+++ b/contents/building-blocks/lists.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Lists
+---
 <p>Lists present multiple line items in a vertical arrangement. They can be used for data selection as
 well as drilldown navigation.</p>
 
