--- a/contents/building-blocks/scrolling.html
+++ b/contents/building-blocks/scrolling.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Scrolling
+---
 <p>Scrolling allows the user to navigate to content in the overflow using a swipe gesture. The
 scrolling speed is proportional to the speed of the gesture.</p>
 
