--- a/contents/building-blocks/seek-bars.html
+++ b/contents/building-blocks/seek-bars.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Seek Bars and Sliders
+---
 <p>Interactive sliders make it possible to select a value from a continuous or discrete range of values
 by moving the slider thumb. The smallest value is to the left, the largest to the right. The
 interactive nature of the slider makes it a great choice for settings that reflect intensity levels,
