--- a/contents/building-blocks/tabs.html
+++ b/contents/building-blocks/tabs.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Tabs
+---
 <img src="../media/tabs_overview.png">
 <p>Tabs in the action bar make it easy to explore and switch between different views or functional
 aspects of your app, or to browse categorized data sets.</p>
