--- a/contents/get-started/creative-vision.html
+++ b/contents/get-started/creative-vision.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Creative Vision
+---
 <img src="../media/creative_vision_main.png">
 <div class="vspace size-1">&#160;</div>
 
