--- a/contents/get-started/principles.html
+++ b/contents/get-started/principles.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Design Principles
+---
 <p>These design principles were developed by and for the Android User Experience Team to keep users'
 best interests in mind. Consider them as you apply your own creativity and design thinking. Deviate
 with purpose.</p>
