--- a/contents/get-started/ui-overview.html
+++ b/contents/get-started/ui-overview.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: UI Overview
+---
 <p>Android's system UI provides the framework on top of which you build your app. Important aspects
 include the Home screen experience, global device navigation, and notifications.</p>
 
