--- a/contents/patterns/actionbar.html
+++ b/contents/patterns/actionbar.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Action Bar
+---
 <img src="../media/action_bar_pattern_overview.png">
 <p>The <em>action bar</em> is arguably the most important structural element of an Android app. It's a
 dedicated piece of real estate at the top of each screen that is generally persistent throughout the
