--- a/contents/patterns/app-structure.html
+++ b/contents/patterns/app-structure.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Application Structure
+---
 <p>Apps come in many varieties that address very different needs. For example:</p>
 
 <ul>
