--- a/contents/patterns/navigation.html
+++ b/contents/patterns/navigation.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Navigation with Back and Up
+---
 <p>Consistent navigation is an essential component of the overall user experience. Few things frustrate
 users more than basic navigation that behaves in inconsistent and unexpected ways. Android 3.0
 introduced significant changes to the global navigation behavior. Thoughtfully following the
