--- a/contents/patterns/notifications.html
+++ b/contents/patterns/notifications.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Notifications
+---
 <p>The notification system allows your app to keep the user informed about important events, such as
 new messages in a chat app or a calendar event.</p>
 
