--- a/contents/patterns/pure-android.html
+++ b/contents/patterns/pure-android.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Pure Android
+---
 <p>Most developers want to distribute their apps on multiple platforms. As you plan your app for
 Android, keep in mind that different platforms play by different rules and conventions. Design
 decisions that make perfect sense on one platform will look and feel misplaced in the context of a
