--- a/contents/patterns/selection.html
+++ b/contents/patterns/selection.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Selection
+---
 <p>Android 3.0 introduced the <em>long press</em> gesture&#8212;that is, a touch that's held in the same
 position for a moment&#8212;as the global gesture to select data. This affects the way you should
 handle multi-select and contextual actions in your apps.</p>
