--- a/contents/style/metrics-grids.html
+++ b/contents/style/metrics-grids.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Metrics and Grids
+---
 <p>Devices vary not only in physical size, but also in screen density (<acronym title="Dots per
 inch">DPI</acronym>). To simplify the way you design for multiple screens, think of each device as
 falling into a particular size bucket and density bucket. The size buckets are <em>handset</em> (smaller than
