--- a/contents/building-blocks/buttons.html
+++ b/contents/building-blocks/buttons.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Buttons
+---
 <p>A button consists of text and/or an image that clearly communicates what action will occur when the
 user touches it. Android supports two different types of buttons: <em>basic buttons</em> and <em>borderless
 buttons</em>. Both can contain text labels and/or images.</p>
