--- a/contents/building-blocks/dialogs.html
+++ b/contents/building-blocks/dialogs.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Dialogs
+---
 <p>Dialogs prompt the user for decisions or additional information required by the app to continue a
 task. Such requests can range from simple Cancel/OK decisions to more complex layouts asking the
 user to adjust settings or enter text.</p>
