--- a/contents/building-blocks/grid-lists.html
+++ b/contents/building-blocks/grid-lists.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Grid Lists
+---
 <img src="../media/gridview_overview.png">
 <p>Grid lists are an alternative to standard list views. They are best suited for showing data sets
 that represent themselves through images. In contrast to simple lists, grid lists may scroll either
