--- a/contents/building-blocks/pickers.html
+++ b/contents/building-blocks/pickers.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Pickers
+---
 <p>Pickers provide a simple way to select a single value from a set. In addition to touching the
 up/down arrow buttons, it's possible to set the desired value from the keyboard or via a swipe
 gesture.</p>
