--- a/contents/building-blocks/progress.html
+++ b/contents/building-blocks/progress.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Progress and Activity
+---
 <p>When an operation of interest to the user is taking place over a relatively long period of time,
 provide visual feedback that it's still happening and in the process of being completed.</p>
 
