--- a/contents/building-blocks/spinners.html
+++ b/contents/building-blocks/spinners.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Spinners
+---
 <p>Spinners provide a quick way to select one value from a set. In the default state, a spinner shows
 its currently selected value. Touching the spinner displays a dropdown menu with all other available
 values, from which the user can select a new one.</p>
