--- a/contents/building-blocks/switches.html
+++ b/contents/building-blocks/switches.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Switches
+---
 <p>Switches allow the user to select options. There are three kinds of switches: checkboxes, radio
 buttons, and on/off switches.</p>
 
