--- a/contents/building-blocks/text-fields.html
+++ b/contents/building-blocks/text-fields.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Text Fields
+---
 <p>Text fields allow the user to type text into your app. They can be either single line or multi-line.
 Touching a text field places the cursor and automatically displays the keyboard. In addition to
 typing, text fields allow for a variety of other activities, such as text selection (cut, copy,
