--- a/contents/patterns/gestures.html
+++ b/contents/patterns/gestures.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Gestures
+---
 <p>Gestures allow users to interact with your app by manipulating the screen objects you provide. The
 following table shows the core gesture set that is supported in Android.</p>
 
