--- a/contents/patterns/multi-pane-layouts.html
+++ b/contents/patterns/multi-pane-layouts.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Multi-pane Layouts
+---
 <p>When writing an app for Android, keep in mind that Android devices come in many different screen
 sizes and types. Make sure that your app consistently provides a balanced and aesthetically pleasing
 layout by adjusting its content to varying screen sizes and orientations.</p>
