--- a/contents/patterns/swipe-views.html
+++ b/contents/patterns/swipe-views.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Swipe Views
+---
 <p>Efficient navigation is one of the cornerstones of a well-designed app. While apps are generally
 built in a hierarchical fashion, there are instances where horizontal navigation can flatten
 vertical hierarchies and make access to related data items faster and more enjoyable. Swipe views
