--- a/contents/style/devices-displays.html
+++ b/contents/style/devices-displays.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Devices and Displays
+---
 <p>Android powers millions of phones, tablets, and other devices in a wide variety of screen sizes and
 form factors. By taking advantage of Android's flexible layout system, you can create apps that
 gracefully scale from large tablets to smaller phones.</p>
