--- a/contents/style/iconography.html
+++ b/contents/style/iconography.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Iconography
+---
 <img src="../media/iconography_overview.png">
 <p>An icon is a graphic that takes up a small portion of screen real estate and provides a quick,
 intuitive representation of an action, a status, or an app.</p>
