--- a/contents/style/touch-feedback.html
+++ b/contents/style/touch-feedback.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Touch Feedback
+---
 <div class="layout-content-row" style="margin-bottom: -100px">
   <div class="layout-content-col span-7">
 
