--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title:
 </style>
 <div id="landing-graphic-container">
   <div id="text-overlay">
-    Welcome to <strong>Android Design</strong>, your place for learning how to design exceptional Android apps.
+    <strong>안드로이드 디자인</strong>에 오신 것을 환영합니다. 이 곳에서는 멋진 안드로이드 앱을 어떻게 만들 수 있는지를 배울 수 있습니다.
     <br><br><a href="get-started/creative-vision.html" class="landing-page-link">Creative Vision</a>
   </div>
 
