디자인 원칙 일부 번역

--- a/get-started/principles.html
+++ b/get-started/principles.html
@@ -1,10 +1,13 @@
 ---
 layout: default
-title: Design Principles
+title: 디자인 원칙
 ---
-<p>These design principles were developed by and for the Android User Experience Team to keep users'
-best interests in mind. Consider them as you apply your own creativity and design thinking. Deviate
-with purpose.</p>
+<p>
+다음의 디자인 원칙은 안드로이드 사용자 경험 팀에서 제작하였으며, 
+These design principles were developed by and for the Android User Experience Team to keep users'
+best interests in mind.
+Consider them as you apply your own creativity and design thinking.
+Deviate with purpose.</p>
 
 
 <h2 id="enchant-me">Enchant Me</h2>
@@ -69,9 +72,10 @@ primary tasks.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Get to know me</h4>
-<p>Learn peoples' preferences over time. Rather than asking them to make the same choices over and
-over, place previous choices within easy reach.</p>
+<h4>나를 알아가 주세요</h4>
+<p>
+사람들의 취향을 점차 배우세요. 사용자에게 매번 같은 선택을 하도록 두지 말고, 기존의 선택을 기억해서 간단하게 그 선택을 할 수 있도록 만드세요.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -104,9 +108,10 @@ over, place previous choices within easy reach.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Pictures are faster than words</h4>
-<p>Consider using pictures to explain ideas. They get people's attention and can be much more efficient
-than words.</p>
+<h4>백문이 불여일견</h4>
+<p>
+글자 대신 그림으로 설명하는 방안을 고려하세요. 사용자의 주의를 끌기에도 좋고 훨씬 효율적이기도 합니다.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -122,9 +127,10 @@ than words.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Decide for me but let me have the final say</h4>
-<p>Take your best guess and act rather than asking first. Too many choices and decisions make people
-unhappy. Just in case you get it wrong, allow for 'undo'.</p>
+<h4>나 대신 판단해주세요. 다만 마지막에는 나에게 물어보세요</h4>
+<p>
+무조건 사용자에게 묻지 말고, 최선의 선택을 추측해서 실행해보세요. 선택지가 너무 많으면 사람들은 불편해합니다. 물론, 추측이 틀릴 때를 대비해서 '되돌리기'를 지원하세요.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -140,9 +146,14 @@ unhappy. Just in case you get it wrong, allow for 'undo'.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Only show what I need when I need it</h4>
-<p>People get overwhelmed when they see too much at once. Break tasks and information into small,
-digestible chunks. Hide options that aren't essential at the moment, and teach people as they go.</p>
+<h4>필요할 때 필요한 것만 보여주세요</h4>
+<p>
+사람들은 너무 많은 것들이 한꺼번에 있으면 혼란에 빠집니다. 
+기능이나 정보를 작은 단위로 쪼개주세요.
+핵심이 아닌 기능은 숨기고, <!-- TODO -->
+People get overwhelmed when they see too much at once. Break tasks and information into small,
+digestible chunks. Hide options that aren't essential at the moment, and teach people as they go.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -195,9 +206,10 @@ easiest thing in the world.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>If it looks the same, it should act the same</h4>
-<p>Help people discern functional differences by making them visually distinct rather than subtle.
-Avoid modes, which are places that look similar but act differently on the same input.</p>
+<h4>똑같아 보이면 똑같이 행동해야죠</h4>
+<p>
+서로 다른 기능을 겉보기에도 다르게 만드는 것은 사람들이 기능을 구별하는 데에 큰 도움이 됩니다.
+겉보기에는 비슷해 보여도 다르게 행동하는 상황을 피하세요.</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -213,9 +225,9 @@ Avoid modes, which are places that look similar but act differently on the same 
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Only interrupt me if it's important</h4>
-<p>Like a good personal assistant, shield people from unimportant minutiae. People want to stay
-focused, and unless it's critical and time-sensitive, an interruption can be taxing and frustrating.</p>
+<h4>정말 중요할 때만 호출하세요</h4>
+<p>유능한 비서가 그렇듯, 자질구레한 내용으로 사용자를 방해하지 마세요.
+사람들은 자신이 원래 하던 일에 집중하고 싶어하고, 정말 중요하고 급한 일이 아니라면 귀찮아할 것입니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -269,9 +281,13 @@ If you can fix it behind the scenes, even better.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Sprinkle encouragement</h4>
-<p>Break complex tasks into smaller steps that can be easily accomplished. Give feedback on actions,
-even if it's just a subtle glow.</p>
+<h4>
+Sprinkle encouragement
+</h4>
+<p>
+복잡한 작업을 분리해서, 쉽게 해낼 수 있는 여러 개의 단계로 만드세요.
+사용자의 행동에는 간단하게라도 응답을 주세요.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -287,10 +303,12 @@ even if it's just a subtle glow.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Do the heavy lifting for me</h4>
-<p>Make novices feel like experts by enabling them to do things they never thought they could. For
-example, shortcuts that combine multiple photo effects can make amateur photographs look amazing in
-only a few steps.</p>
+<h4>
+Do the heavy lifting for me</h4>
+<p>Make novices feel like experts by enabling them to do things they never thought they could.
+예를 들어, 여러 사진 효과를 하나로 묶어주면 누구나 쉽게 전문가처럼 멋진 사진을 찍을 수 있습니다.
+For example, shortcuts that combine multiple photo effects can make amateur photographs look amazing in only a few steps.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -306,9 +324,11 @@ only a few steps.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Make important things fast</h4>
-<p>Not all actions are equal. Decide what's most important in your app and make it easy to find and
-fast to use, like the shutter button in a camera, or the pause button in a music player.</p>
+<h4>중요한 것을 간편하게 만드세요</h4>
+<p>
+모든 기능이 동등하지는 않습니다. 앱에서 무엇이 가장 중요한지 결정하고, 그 기능을 쉽고 빠르게 쓸 수 있도록 만드세요.
+카메라 셔터 버튼이나 음악 재생기의 일시정지 기능처럼요.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
