몇개 더 수정

--- a/get-started/principles.html
+++ b/get-started/principles.html
@@ -91,8 +91,10 @@ primary tasks.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Keep it brief</h4>
-<p>Use short phrases with simple words. People are likely to skip sentences if they're long.</p>
+<h4>간단히</h4>
+<p>
+단어는 쉽게 문장은 짧게. 사람들은 긴 문장을 잘 읽지 않습니다.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -127,9 +129,9 @@ primary tasks.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>나 대신 판단해주세요. 다만 마지막에는 나에게 물어보세요</h4>
+<h4>나 대신 판단하고, 다만 마지막에는 나에게 물어보세요</h4>
 <p>
-무조건 사용자에게 묻지 말고, 최선의 선택을 추측해서 실행해보세요. 선택지가 너무 많으면 사람들은 불편해합니다. 물론, 추측이 틀릴 때를 대비해서 '되돌리기'를 지원하세요.
+무조건 사용자에게 묻지 말고, 최선의 선택을 추측해서 실행해보세요. 선택지가 너무 많으면 사람들은 불편해합니다. 물론, 추측이 틀릴 때를 대비해서 '되돌리기'를 지원해야겠죠.
 </p>
 
   </div>
@@ -150,10 +152,7 @@ primary tasks.</p>
 <p>
 사람들은 너무 많은 것들이 한꺼번에 있으면 혼란에 빠집니다. 
 기능이나 정보를 작은 단위로 쪼개주세요.
-핵심이 아닌 기능은 숨기고, <!-- TODO -->
-People get overwhelmed when they see too much at once. Break tasks and information into small,
-digestible chunks. Hide options that aren't essential at the moment, and teach people as they go.
-</p>
+당장 중요하지 않은 기능은 숨기고, 필요할 때 사용자에게 알려주세요.</p>
 
   </div>
   <div class="layout-content-col span-6">
