첫문단 조금 더 수정 (아직 덜)

--- a/get-started/principles.html
+++ b/get-started/principles.html
@@ -3,10 +3,8 @@ layout: default
 title: 디자인 원칙
 ---
 <p>
-다음의 디자인 원칙은 안드로이드 사용자 경험 팀에서 제작하였으며, 
-These design principles were developed by and for the Android User Experience Team to keep users'
-best interests in mind.
-Consider them as you apply your own creativity and design thinking.
+이 디자인 원칙은 안드로이드 사용자 경험 팀에서 제작하였으며, 사용자의 쾌적한 편의를 위해 구성되었습니다.
+아래 원칙들을 여러분 개개인의 창의성과 디자인 구상에 적용해 보세요.
 Deviate with purpose.</p>
 
 
