첫 문단과 항목 두 개

--- a/get-started/principles.html
+++ b/get-started/principles.html
@@ -4,8 +4,8 @@ title: 디자인 원칙
 ---
 <p>
 이 디자인 원칙은 안드로이드 사용자 경험 팀에서 제작하였으며, 사용자의 쾌적한 편의를 위해 구성되었습니다.
-아래 원칙들을 여러분 개개인의 창의성과 디자인 구상에 적용해 보세요.
-Deviate with purpose.</p>
+아래 원칙들을 여러분 개개인의 창의성과 디자인 구상에 적용해 보고, 필요하면 상황에 맞게 수정하세요.
+</p>
 
 
 <h2 id="enchant-me">Enchant Me</h2>
@@ -33,9 +33,11 @@ force is at hand.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Real objects are more fun than buttons and menus</h4>
-<p>Allow people to directly touch and manipulate objects in your app. It reduces the cognitive effort
-needed to perform a task while making it more emotionally satisfying.</p>
+<h4>버튼이나 메뉴보다는 실물이 낫죠</h4>
+<p>
+앱 화면에 나오는 대상들을 손으로 바로 고칠 수 있도록 만드세요.
+인지 부하도 줄어들고, 더 재미있습니다.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -51,10 +53,11 @@ needed to perform a task while making it more emotionally satisfying.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Let me make it mine</h4>
-<p>People love to add personal touches because it helps them feel at home and in control. Provide
-sensible, beautiful defaults, but also consider fun, optional customizations that don't hinder
-primary tasks.</p>
+<h4>내 것으로 만들 수 있도록</h4>
+<p>
+프로그램에 사용자 개인 취향을 넣을 수 있다면, 사람들은 자기 집에 온 것처럼 편안함을 느낍니다.
+멋진 기본 환경을 제공하는 것도 중요하지만, 재미있는 개인 맞춤 설정을 넣어 보세요. 물론 원래의 기능을 가리지는 않도록요.
+</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -304,7 +307,6 @@ Sprinkle encouragement
 Do the heavy lifting for me</h4>
 <p>Make novices feel like experts by enabling them to do things they never thought they could.
 예를 들어, 여러 사진 효과를 하나로 묶어주면 누구나 쉽게 전문가처럼 멋진 사진을 찍을 수 있습니다.
-For example, shortcuts that combine multiple photo effects can make amateur photographs look amazing in only a few steps.
 </p>
 
   </div>
