--- a/patterns/new-4-0.html
+++ b/patterns/new-4-0.html
@@ -1,15 +1,16 @@
 ---
 layout: default
-title: New in Android 4.0
+title: 안드로이드 4.0의 새로운 점
 ---
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Navigation bar</h4>
-<p>Android 4.0 removes the need for traditional hardware keys on phones by replacing them with a
-virtual navigation bar that houses the Back, Home and Recents buttons. Read the
-<a href="compatibility.html">Compatibility</a> pattern to learn how the OS adapts to
-phones with hardware buttons and how pre-Android 3.0 apps that rely on menu keys are supported.</p>
+<h4>네비게이션 바</h4>
+<p>안드로이드 4.0에선 폰의 전통적인 하드웨어 키를 제거하였습니다. 대신 뒤로
+    가기, 홈, 최근 버튼을 가진 가상 네비게이션을 사용하죠. 하드웨어
+    버튼을 가진 폰과 메뉴 키에 의존적인 안드로이드 3.0 이전의 앱을
+    어떻게 운영체제가 다루는지 
+<a href="compatibility.html">Compatibility</a> 에서 알아보세요.</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -25,9 +26,9 @@ phones with hardware buttons and how pre-Android 3.0 apps that rely on menu keys
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Action bar</h4>
-<p>The action bar is the most important structural element of an Android app. It provides consistent
-navigation across the platform and allows your app to surface actions.</p>
+<h4>액션 바</h4>
+<p>액션 바는 안드로이드 앱의 가장 중요한 구조 요소입니다. 액션바는
+    플랫폼 전반을 일관되게 조작하게 하여 앱의 액션을 다룰 수 있게 합니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
