--- a/patterns/new-4-0.html
+++ b/patterns/new-4-0.html
@@ -10,7 +10,7 @@ title: 안드로이드 4.0의 새로운 점
     가기, 홈, 최근 버튼을 가진 가상 네비게이션을 사용하죠. 하드웨어
     버튼을 가진 폰과 메뉴 키에 의존적인 안드로이드 3.0 이전의 앱을
     어떻게 운영체제가 다루는지 
-<a href="compatibility.html">Compatibility</a> 에서 알아보세요.</p>
+<a href="compatibility.html">호환성</a> 에서 알아보세요.</p>
 
   </div>
   <div class="layout-content-col span-6">
