--- a/patterns/index.html
+++ b/patterns/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Patterns
+title: 패턴
 ---
 <style>
 #landing-graphic-container {
@@ -16,8 +16,9 @@ title: Patterns
 </style>
 <div id="landing-graphic-container">
   <div id="text-overlay">
-    Design apps that behave in a consistent, predictable fashion.
-    <br><br><a href="new-4-0.html" class="landing-page-link">New in Android 4.0</a>
+    일관되고, 예측가능한 행동을 하는 앱을 설계하세요.
+   <br><br><a href="new-4-0.html" class="landing-page-link">안드로이드
+  4.0의 새로운 점</a>
   </div>
 
   <a href="new-4-0.html">
