--- a/patterns/new-4-0.html
+++ b/patterns/new-4-0.html
@@ -10,7 +10,7 @@ title: 안드로이드 4.0의 새로운 점
     가기, 홈, 최근 버튼을 가진 가상 네비게이션을 사용하죠. 하드웨어
     버튼을 가진 폰과 메뉴 키에 의존적인 안드로이드 3.0 이전의 앱을
     어떻게 운영체제가 다루는지 
-<a href="compatibility.html">호환성</a> 에서 알아보세요.</p>
+<a href="compatibility.html">호환성</a>에서 알아보세요.</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -44,10 +44,11 @@ title: 안드로이드 4.0의 새로운 점
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Multi-pane layouts</h4>
-<p>Creating apps that scale well across different form factors and screen sizes is important in the
-Android world. Multi-pane layouts allow you to combine different activities that show separately on
-smaller devices into richer compound views for tablets.</p>
+<h4>다중 창 레이아웃</h4>
+<p>다양한 폼 팩터와 스크린 크기의 변화을 잘 다루도록 앱을 만드는 것은
+    안드로이드 세계에서 아주 중요합니다. 다중 창 레이아웃은 다른
+    액티비티를 결합하여 작은 단말기에서는 나누고, 타블렛에서는
+    호화로운 복합 뷰로 표현 할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
@@ -63,9 +64,10 @@ smaller devices into richer compound views for tablets.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-7">
 
-<h4>Selection</h4>
-<p>The long press gesture which was traditionally used to show contextual actions for objects is now
-used for data selection. When selecting data, contextual action bars allow you to surface actions.</p>
+<h4>선택</h4>
+<p>길게 누르는 동작은 이전에는 객체에 대한 문맥 메뉴를
+    보여줬습니다. 이제는 길게 눌러 데이터를 선택할 수
+    있습니다. 데이터를 선택할 때 문맥 액션 바(contextual action bar)에서 액션을 조작할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-6">
