downloads/index.html 번역 완료 (리뷰 필요)

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -5,31 +5,30 @@ title: Downloads
 <div class="layout-content-row">
   <div class="layout-content-col span-9">
 
-<p>Want everything? We've bundled all the downloads available on Android Design into a single ZIP file.
-You can also download individual files listed below.</p>
-<p>You may use these materials without restriction in your apps and to develop your apps.</p>
+<p>모두 받고 싶다고요? 안드로이드 디자인에서 사용할 수 있는 모든 다운로드 내용을 하나의 ZIP 파일로 묶었습니다.
+또한 아래 나열된 개별 파일을 받으실 수도 있습니다.</p>
+<p>앱을 개발하기 위해 여러분의 앱에서 제한없이 이 요소들을 사용하셔도 좋습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Downloads_20120229.zip">Download All</a>
+  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Downloads_20120229.zip">모두 다운로드</a>
 </p>
 
   </div>
 </div>
 
 
-<h2 id="stencils">Stencils and Sources</h2>
+<h2 id="stencils">스텐실과 원본</h2>
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<p>Drag and drop your way to beautifully designed Ice Cream Sandwich apps. The stencils feature the
-rich typography, colors, interactive controls, and icons found throughout Android 4.0, along with
-phone and tablet outlines to frame your creations. Source files for icons and controls are also
-available.</p>
+	  <p>아름답게 디자인한 아이스크림 샌드위치 앱에 여러분의 방식을 끌어다 놓으십시오. 여러분의 창작물에 대해 
+	  틀을 갖춘 폰과 태블릿 윤곽에 따라, 안드로이드 4.0에서 찾을 수 있는 풍부한 타이포그래피, 색상, 대화형 컨트롤, 
+	  아이콘 스텐실을 갖추고 있습니다. 아이콘과 컨트롤을 위한 원본 파일도 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -48,17 +47,15 @@ available.</p>
 </div>
 
 
-<h2 id="action-bar-icon-pack">Action Bar Icon Pack</h2>
+<h2 id="action-bar-icon-pack">액션 바 아이콘 모음</h2>
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<p>Action bar icons are graphic buttons that represent the most important actions people can take
-within your app. <a href="../style/iconography.html">More on Action Bar Iconography</a></p>
-<p>The download package includes icons that are scaled for various screen densities and suitable for
-use with the Holo Light and Holo Dark themes. The package also includes unstyled icons that you can
-modify to match your theme, plus source files.</p>
+	  <p>동작 표시줄 아이콘은 사람들이 앱 상에서 취할 수 있는 가장 중요한 동작을 표시하는 그래픽 단추입니다.
+	  <a href="../style/iconography.html">액션 바 아이콘 그래픽에 대한 더 많은 내용 보기</a></p>
+<p>다운로드 패키지에는 다양한 화면 크기에 맞게 크기를 조정하고 홀로 라이트, 홀로 다크 테마에 적당하게 사용할 수 있는 아이콘을 포함하였습니다. 또한 여러분의 테마에 맞게 수정할 수 있는 스타일을 갖추지 않은 아이콘과 원본 파일도 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -68,7 +65,7 @@ modify to match your theme, plus source files.</p>
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Icons_20120229.zip">Action Bar Icon Pack</a>
+  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Icons_20120229.zip">액션 바 아이콘 모음</a>
 </p>
 
   </div>
@@ -82,9 +79,8 @@ modify to match your theme, plus source files.</p>
   <div class="layout-content-col span-5">
 
 <h4>Roboto</h4>
-<p>Ice Cream Sandwich introduced a new type family named Roboto, created specifically for the
-requirements of UI and high-resolution screens.</p>
-<p><a href="../style/typography.html#actionbar">More on Roboto</a></p>
+<p>아이스크림 샌드위치에는 UI와 고해상도 화면의 요구에 걸맞게 만들어진 새로운 글꼴 모음 로보토를 도입하였습니다.</p>
+<p><a href="../style/typography.html#actionbar">로보토에 대한 더 많은 내용 보기</a></p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -94,7 +90,7 @@ requirements of UI and high-resolution screens.</p>
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Roboto_Hinted_20111129.zip">Roboto</a>
+  <a class="download-button" href="https://dl-ssl.google.com/android/design/Roboto_Hinted_20111129.zip">로보토</a>
   <a class="download-button" href="https://dl-ssl.google.com/android/design/Roboto_Specimen_Book_20111129.pdf">Specimen Book</a>
 </p>
 
@@ -105,10 +101,9 @@ requirements of UI and high-resolution screens.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>Color</h4>
-<p>Blue is the standard accent color in Android's color palette. Each color has a corresponding darker
-shade that can be used as a complement when needed.</p>
-<p><a href="../style/color.html">More on Color</a></p>
+<h4>색</h4>
+<p>푸른색은 안드로이드 색 팔레트의 표준 강조 색입니다. 필요할 때 보완적으로 사용할 수 있게끔 제각각의 색에 대해 어두운 그림자색이 있습니다.</p>
+<p><a href="../style/color.html">색에 대한 더 많은 내용 보기</a></p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -118,7 +113,7 @@ shade that can be used as a complement when needed.</p>
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">Color Swatches</a>
+  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">색상 견본</a>
 </p>
 
   </div>
