--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,34 +1,34 @@
 ---
 layout: default
-title: Downloads
+title: ë‹¤ìš´ë¡œë“œ
 ---
 <div class="layout-content-row">
   <div class="layout-content-col span-9">
 
-<p>¸ðµÎ ¹Þ°í ½Í´Ù°í¿ä? ¾Èµå·ÎÀÌµå µðÀÚÀÎ¿¡¼­ »ç¿ëÇÒ ¼ö ÀÖ´Â ¸ðµç ´Ù¿î·Îµå ³»¿ëÀ» ÇÏ³ªÀÇ ZIP ÆÄÀÏ·Î ¹­¾ú½À´Ï´Ù.
-¶ÇÇÑ ¾Æ·¡ ³ª¿­µÈ °³º° ÆÄÀÏÀ» ¹ÞÀ¸½Ç ¼öµµ ÀÖ½À´Ï´Ù.</p>
-<p>¾ÛÀ» °³¹ßÇÏ±â À§ÇØ ¿©·¯ºÐÀÇ ¾Û¿¡¼­ Á¦ÇÑ¾øÀÌ ÀÌ ¿ä¼ÒµéÀ» »ç¿ëÇÏ¼Åµµ ÁÁ½À´Ï´Ù.</p>
+<p>ëª¨ë‘ ë°›ê³  ì‹¶ë‹¤ê³ ìš”? ì•ˆë“œë¡œì´ë“œ ë””ìžì¸ì—ì„œ ì‚¬ìš©í•  ìˆ˜ ìžˆëŠ” ëª¨ë“  ë‹¤ìš´ë¡œë“œ ë‚´ìš©ì„ í•˜ë‚˜ì˜ ZIP íŒŒì¼ë¡œ ë¬¶ì—ˆìŠµë‹ˆë‹¤.
+ë˜í•œ ì•„ëž˜ ë‚˜ì—´ëœ ê°œë³„ íŒŒì¼ì„ ë°›ìœ¼ì‹¤ ìˆ˜ë„ ìžˆìŠµë‹ˆë‹¤.</p>
+<p>ì•±ì„ ê°œë°œí•˜ê¸° ìœ„í•´ ì—¬ëŸ¬ë¶„ì˜ ì•±ì—ì„œ ì œí•œì—†ì´ ì´ ìš”ì†Œë“¤ì„ ì‚¬ìš©í•˜ì…”ë„ ì¢‹ìŠµë‹ˆë‹¤.</p>
 
   </div>
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Downloads_20120229.zip">¸ðµÎ ´Ù¿î·Îµå</a>
+  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Downloads_20120229.zip">ëª¨ë‘ ë‹¤ìš´ë¡œë“œ</a>
 </p>
 
   </div>
 </div>
 
 
-<h2 id="stencils">½ºÅÙ½Ç°ú ¿øº»</h2>
+<h2 id="stencils">ìŠ¤í…ì‹¤ê³¼ ì›ë³¸</h2>
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-	  <p>¾Æ¸§´ä°Ô µðÀÚÀÎÇÑ ¾ÆÀÌ½ºÅ©¸² »÷µåÀ§Ä¡ ¾Û¿¡ ¿©·¯ºÐÀÇ ¹æ½ÄÀ» ²ø¾î´Ù ³õÀ¸½Ê½Ã¿À. ¿©·¯ºÐÀÇ Ã¢ÀÛ¹°¿¡ ´ëÇØ 
-	  Æ²À» °®Ãá Æù°ú ÅÂºí¸´ À±°û¿¡ µû¶ó, ¾Èµå·ÎÀÌµå 4.0¿¡¼­ Ã£À» ¼ö ÀÖ´Â Ç³ºÎÇÑ Å¸ÀÌÆ÷±×·¡ÇÇ, »ö»ó, ´ëÈ­Çü ÄÁÆ®·Ñ, 
-	  ¾ÆÀÌÄÜ ½ºÅÙ½ÇÀ» °®Ãß°í ÀÖ½À´Ï´Ù. ¾ÆÀÌÄÜ°ú ÄÁÆ®·ÑÀ» À§ÇÑ ¿øº» ÆÄÀÏµµ ÀÖ½À´Ï´Ù.</p>
+<p>ì•„ë¦„ë‹µê²Œ ë””ìžì¸í•œ ì•„ì´ìŠ¤í¬ë¦¼ ìƒŒë“œìœ„ì¹˜ ì•±ì— ì—¬ëŸ¬ë¶„ì˜ ë°©ì‹ì„ ëŒì–´ë‹¤ ë†“ìœ¼ì‹­ì‹œì˜¤. ì—¬ëŸ¬ë¶„ì˜ ì°½ìž‘ë¬¼ì— ëŒ€í•´
+í‹€ì„ ê°–ì¶˜ í°ê³¼ íƒœë¸”ë¦¿ ìœ¤ê³½ì— ë”°ë¼, ì•ˆë“œë¡œì´ë“œ 4.0ì—ì„œ ì°¾ì„ ìˆ˜ ìžˆëŠ” í’ë¶€í•œ íƒ€ì´í¬ê·¸ëž˜í”¼, ìƒ‰ìƒ, ëŒ€í™”í˜• ì»¨íŠ¸ë¡¤,
+ì•„ì´ì½˜ ìŠ¤í…ì‹¤ì„ ê°–ì¶”ê³  ìžˆìŠµë‹ˆë‹¤. ì•„ì´ì½˜ê³¼ ì»¨íŠ¸ë¡¤ì„ ìœ„í•œ ì›ë³¸ íŒŒì¼ë„ ìžˆìŠµë‹ˆë‹¤.</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -47,15 +47,15 @@ title: Downloads
 </div>
 
 
-<h2 id="action-bar-icon-pack">¾×¼Ç ¹Ù ¾ÆÀÌÄÜ ¸ðÀ½</h2>
+<h2 id="action-bar-icon-pack">ì•¡ì…˜ ë°” ì•„ì´ì½˜ ëª¨ìŒ</h2>
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-	  <p>µ¿ÀÛ Ç¥½ÃÁÙ ¾ÆÀÌÄÜÀº »ç¶÷µéÀÌ ¾Û »ó¿¡¼­ ÃëÇÒ ¼ö ÀÖ´Â °¡Àå Áß¿äÇÑ µ¿ÀÛÀ» Ç¥½ÃÇÏ´Â ±×·¡ÇÈ ´ÜÃßÀÔ´Ï´Ù.
-	  <a href="../style/iconography.html">¾×¼Ç ¹Ù ¾ÆÀÌÄÜ ±×·¡ÇÈ¿¡ ´ëÇÑ ´õ ¸¹Àº ³»¿ë º¸±â</a></p>
-<p>´Ù¿î·Îµå ÆÐÅ°Áö¿¡´Â ´Ù¾çÇÑ È­¸é Å©±â¿¡ ¸Â°Ô Å©±â¸¦ Á¶Á¤ÇÏ°í È¦·Î ¶óÀÌÆ®, È¦·Î ´ÙÅ© Å×¸¶¿¡ Àû´çÇÏ°Ô »ç¿ëÇÒ ¼ö ÀÖ´Â ¾ÆÀÌÄÜÀ» Æ÷ÇÔÇÏ¿´½À´Ï´Ù. ¶ÇÇÑ ¿©·¯ºÐÀÇ Å×¸¶¿¡ ¸Â°Ô ¼öÁ¤ÇÒ ¼ö ÀÖ´Â ½ºÅ¸ÀÏÀ» °®ÃßÁö ¾ÊÀº ¾ÆÀÌÄÜ°ú ¿øº» ÆÄÀÏµµ ÀÖ½À´Ï´Ù.</p>
+<p>ë™ìž‘ í‘œì‹œì¤„ ì•„ì´ì½˜ì€ ì‚¬ëžŒë“¤ì´ ì•± ìƒì—ì„œ ì·¨í•  ìˆ˜ ìžˆëŠ” ê°€ìž¥ ì¤‘ìš”í•œ ë™ìž‘ì„ í‘œì‹œí•˜ëŠ” ê·¸ëž˜í”½ ë‹¨ì¶”ìž…ë‹ˆë‹¤.
+<a href="../style/iconography.html">ì•¡ì…˜ ë°” ì•„ì´ì½˜ ê·¸ëž˜í”½ì— ëŒ€í•œ ë” ë§Žì€ ë‚´ìš© ë³´ê¸°</a></p>
+<p>ë‹¤ìš´ë¡œë“œ íŒ¨í‚¤ì§€ì—ëŠ” ë‹¤ì–‘í•œ í™”ë©´ í¬ê¸°ì— ë§žê²Œ í¬ê¸°ë¥¼ ì¡°ì •í•˜ê³  í™€ë¡œ ë¼ì´íŠ¸, í™€ë¡œ ë‹¤í¬ í…Œë§ˆì— ì ë‹¹í•˜ê²Œ ì‚¬ìš©í•  ìˆ˜ ìžˆëŠ” ì•„ì´ì½˜ì„ í¬í•¨í•˜ì˜€ìŠµë‹ˆë‹¤. ë˜í•œ ì—¬ëŸ¬ë¶„ì˜ í…Œë§ˆì— ë§žê²Œ ìˆ˜ì •í•  ìˆ˜ ìžˆëŠ” ìŠ¤íƒ€ì¼ì„ ê°–ì¶”ì§€ ì•Šì€ ì•„ì´ì½˜ê³¼ ì›ë³¸ íŒŒì¼ë„ ìžˆìŠµë‹ˆë‹¤.</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -65,22 +65,22 @@ title: Downloads
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Icons_20120229.zip">¾×¼Ç ¹Ù ¾ÆÀÌÄÜ ¸ðÀ½</a>
+  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Icons_20120229.zip">ì•¡ì…˜ ë°” ì•„ì´ì½˜ ëª¨ìŒ</a>
 </p>
 
   </div>
 </div>
 
 
-<h2 id="style">Style</h2>
+<h2 id="style">ìŠ¤íƒ€ì¼</h2>
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>Roboto</h4>
-<p>¾ÆÀÌ½ºÅ©¸² »÷µåÀ§Ä¡¿¡´Â UI¿Í °íÇØ»óµµ È­¸éÀÇ ¿ä±¸¿¡ °É¸Â°Ô ¸¸µé¾îÁø »õ·Î¿î ±Û²Ã ¸ðÀ½ ·Îº¸Åä¸¦ µµÀÔÇÏ¿´½À´Ï´Ù.</p>
-<p><a href="../style/typography.html#actionbar">·Îº¸Åä¿¡ ´ëÇÑ ´õ ¸¹Àº ³»¿ë º¸±â</a></p>
+<h4>ë¡œë³´í† </h4>
+<p>ì•„ì´ìŠ¤í¬ë¦¼ ìƒŒë“œìœ„ì¹˜ì—ëŠ” UIì™€ ê³ í•´ìƒë„ í™”ë©´ì˜ ìš”êµ¬ì— ê±¸ë§žê²Œ ë§Œë“¤ì–´ì§„ ìƒˆë¡œìš´ ê¸€ê¼´ ëª¨ìŒ ë¡œë³´í† ë¥¼ ë„ìž…í•˜ì˜€ìŠµë‹ˆë‹¤.</p>
+<p><a href="../style/typography.html#actionbar">ë¡œë³´í† ì— ëŒ€í•œ ë” ë§Žì€ ë‚´ìš© ë³´ê¸°</a></p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -90,7 +90,7 @@ title: Downloads
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Roboto_Hinted_20111129.zip">·Îº¸Åä</a>
+  <a class="download-button" href="https://dl-ssl.google.com/android/design/Roboto_Hinted_20111129.zip">ë¡œë³´í† </a>
   <a class="download-button" href="https://dl-ssl.google.com/android/design/Roboto_Specimen_Book_20111129.pdf">Specimen Book</a>
 </p>
 
@@ -101,9 +101,9 @@ title: Downloads
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>»ö</h4>
-<p>Çª¸¥»öÀº ¾Èµå·ÎÀÌµå »ö ÆÈ·¹Æ®ÀÇ Ç¥ÁØ °­Á¶ »öÀÔ´Ï´Ù. ÇÊ¿äÇÒ ¶§ º¸¿ÏÀûÀ¸·Î »ç¿ëÇÒ ¼ö ÀÖ°Ô²û Á¦°¢°¢ÀÇ »ö¿¡ ´ëÇØ ¾îµÎ¿î ±×¸²ÀÚ»öÀÌ ÀÖ½À´Ï´Ù.</p>
-<p><a href="../style/color.html">»ö¿¡ ´ëÇÑ ´õ ¸¹Àº ³»¿ë º¸±â</a></p>
+<h4>ìƒ‰</h4>
+<p>í‘¸ë¥¸ìƒ‰ì€ ì•ˆë“œë¡œì´ë“œ ìƒ‰ íŒ”ë ˆíŠ¸ì˜ í‘œì¤€ ê°•ì¡° ìƒ‰ìž…ë‹ˆë‹¤. í•„ìš”í•  ë•Œ ë³´ì™„ì ìœ¼ë¡œ ì‚¬ìš©í•  ìˆ˜ ìžˆê²Œë” ì œê°ê°ì˜ ìƒ‰ì— ëŒ€í•´ ì–´ë‘ìš´ ê·¸ë¦¼ìžìƒ‰ì´ ìžˆìŠµë‹ˆë‹¤.</p>
+<p><a href="../style/color.html">ìƒ‰ì— ëŒ€í•œ ë” ë§Žì€ ë‚´ìš© ë³´ê¸°</a></p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -113,7 +113,7 @@ title: Downloads
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">»ö»ó °ßº»</a>
+  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">ìƒ‰ìƒ ê²¬ë³¸</a>
 </p>
 
   </div>
