동작 표시줄 -> 액션 바

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -53,7 +53,7 @@ title: 다운로드
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<p>동작 표시줄 아이콘은 사람들이 앱 상에서 취할 수 있는 가장 중요한 동작을 표시하는 그래픽 단추입니다.
+<p>액션 바 아이콘은 사람들이 앱 상에서 취할 수 있는 가장 중요한 동작을 표시하는 그래픽 단추입니다.
 <a href="../style/iconography.html">액션 바 아이콘 그래픽에 대한 더 많은 내용 보기</a></p>
 <p>다운로드 패키지에는 다양한 화면 크기에 맞게 크기를 조정하고 홀로 라이트, 홀로 다크 테마에 적당하게 사용할 수 있는 아이콘을 포함하였습니다. 또한 여러분의 테마에 맞게 수정할 수 있는 스타일을 갖추지 않은 아이콘과 원본 파일도 있습니다.</p>
 
