제스쳐의 터치와 롱 프레스만 번역.

--- a/patterns/gestures.html
+++ b/patterns/gestures.html
@@ -1,34 +1,35 @@
 ---
 layout: default
-title: Gestures
+title: 제스쳐
 ---
-<p>Gestures allow users to interact with your app by manipulating the screen objects you provide. The
-following table shows the core gesture set that is supported in Android.</p>
+<p>우리 앱은 사용자가 제스쳐로 스크린 객체를 조작하여
+상호작용합니다. 아래의 표는 안드로이드가 제공하는 핵심 제스쳐 집합입니다.</p>
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-    <img src="../media/gesture_touch.png"><h4>Touch</h4>
-<p>Triggers the default functionality for a given item.</p>
+    <img src="../media/gesture_touch.png"><h4>터치</h4>
+<p>선택된 항목의 기본 기능을 작동시킵니다.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>Action</h4>
-    <p>Press, lift</p>
+    <h4>행동</h4>
+    <p>누르고, 뗍니다</p>
 </li>
 </ul>
 </div>
   <div class="layout-content-col span-4">
 
-    <img src="../media/gesture_longtouch.png"><h4>Long press</h4>
-<p>Enters data selection mode. Allows you to select one or more items in a view and act upon
-  the data using a contextual action bar. Avoid using long press for showing contextual menus.</p>
+    <img src="../media/gesture_longtouch.png"><h4>롱 프레스</h4>
+<p>데이터 선택 모드로 들어갑니다. 하나 이상의 항목을 선택할 수 있고
+    문맥 액션 바를 통해 데이터를 조작할 수 있습니다. 문맥 메뉴를
+    보여주기 위한 롱 프레스는 안됩니다.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>Action</h4>
-    <p>Press, wait, lift</p>
+    <h4>행동</h4>
+    <p>누르고, 기다리고, 똅니다</p>
 </li>
 </ul>
 </div>
