타이포그래피 -> 글꼴

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -27,7 +27,7 @@ title: 다운로드
   <div class="layout-content-col span-5">
 
 <p>아름답게 디자인한 아이스크림 샌드위치 앱에 여러분의 방식을 끌어다 놓으십시오. 여러분의 창작물에 대해
-틀을 갖춘 폰과 태블릿 윤곽에 따라, 안드로이드 4.0에서 찾을 수 있는 풍부한 타이포그래피, 색상, 대화형 컨트롤,
+틀을 갖춘 폰과 태블릿 윤곽에 따라, 안드로이드 4.0에서 찾을 수 있는 풍부한 글꼴, 색상, 대화형 컨트롤,
 아이콘 스텐실을 갖추고 있습니다. 아이콘과 컨트롤을 위한 원본 파일도 있습니다.</p>
 
   </div>
