다운로드의 어색한 부분을 수정하였습니다.

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -26,9 +26,11 @@ title: 다운로드
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<p>아름답게 디자인한 아이스크림 샌드위치 앱에 여러분의 방식을 끌어다 놓으십시오. 여러분의 창작물에 대해
-틀을 갖춘 폰과 태블릿 윤곽에 따라, 안드로이드 4.0에서 찾을 수 있는 풍부한 글꼴, 색상, 대화형 컨트롤,
-아이콘 스텐실을 갖추고 있습니다. 아이콘과 컨트롤을 위한 원본 파일도 있습니다.</p>
+<p>아름답게 디자인한 아이스크림 샌드위치 앱을 원하는 대로 만드세요. 이
+    스텐실들은 안드로이드 4.0에서 볼 수 있는 풍부한
+    글꼴, 색상, 대화형 컨트롤을 갖추었습니다. 폰과 타블렛 윤곽에 맞게
+    여러분의 창작물을 표현합니다. 아이콘과 컨트롤을 담은 위한 원본
+    파일을 사용할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -53,9 +55,12 @@ title: 다운로드
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<p>액션 바 아이콘은 사람들이 앱 상에서 취할 수 있는 가장 중요한 동작을 표시하는 그래픽 단추입니다.
+<p>액션 바 아이콘은 사람들이 앱 상에서 취할 수 있는 가장 중요한 동작을 표시하는 그래픽 버튼입니다.
 <a href="../style/iconography.html">액션 바 아이콘 그래픽에 대한 더 많은 내용 보기</a></p>
-<p>다운로드 패키지에는 다양한 화면 크기에 맞게 크기를 조정하고 홀로 라이트, 홀로 다크 테마에 적당하게 사용할 수 있는 아이콘을 포함하였습니다. 또한 여러분의 테마에 맞게 수정할 수 있는 스타일을 갖추지 않은 아이콘과 원본 파일도 있습니다.</p>
+<p>다양한 화면 밀도에 맞게 조정되고, 홀로 라이트, 홀로 다크 테마에
+    사용할 수 있게 맞추어진 아이콘들을 패키지 다운로드에
+    담았습니다. 또한 여러분의 테마에 맞게 수정할 수 있는 스타일을
+    갖추지 않은 아이콘과 원본 파일도 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -80,7 +85,7 @@ title: 다운로드
 
 <h4>로보토</h4>
 <p>아이스크림 샌드위치에는 UI와 고해상도 화면의 요구에 걸맞게 만들어진 새로운 글꼴 모음 로보토를 도입하였습니다.</p>
-<p><a href="../style/typography.html#actionbar">로보토에 대한 더 많은 내용 보기</a></p>
+<p><a href="../style/typography.html#actionbar">로보토에 대해 더 보기</a></p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -113,7 +118,9 @@ title: 다운로드
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">색상 견본</a>
+  <a class="download-button"
+  href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">색상에
+  대해 더 보기</a>
 </p>
 
   </div>
