specimen book 문구 수정.

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -5,9 +5,9 @@ title: 다운로드
 <div class="layout-content-row">
   <div class="layout-content-col span-9">
 
-<p>모두 받고 싶다고요? 안드로이드 디자인에서 사용할 수 있는 모든 다운로드 내용을 하나의 ZIP 파일로 묶었습니다.
-또한 아래 나열된 개별 파일을 받으실 수도 있습니다.</p>
-<p>앱을 개발하기 위해 여러분의 앱에서 제한없이 이 요소들을 사용하셔도 좋습니다.</p>
+<p>모두 받고 싶으세요? 안드로이드 디자인에서 사용할 수 있는 모든
+    다운로드 내용을 하나의 ZIP 파일로 묶었습니다. 또 아래 나열된 개별 파일을 받으실 수도 있습니다.</p>
+<p>이 요소들은 여러분에 앱과 앱의 개발에서 앱에서 제한없이 사용할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -26,11 +26,10 @@ title: 다운로드
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<p>아름답게 디자인한 아이스크림 샌드위치 앱을 원하는 대로 만드세요. 이
-    스텐실들은 안드로이드 4.0에서 볼 수 있는 풍부한
-    글꼴, 색상, 대화형 컨트롤을 갖추었습니다. 폰과 타블렛 윤곽에 맞게
-    여러분의 창작물을 표현합니다. 아이콘과 컨트롤을 담은 위한 원본
-    파일을 사용할 수 있습니다.</p>
+<p>원하는 대로 아름답게 설계한 아이스크림 샌드위치 앱을 만드세요. 이
+    스텐실들은 안드로이드 4.0에서 볼 수 있는 풍부한 글꼴, 색상, 대화형
+    컨트롤을 갖추었습니다. 폰과 타블렛 윤곽에 맞게 여러분의 창작물을
+    표현합니다. 아이콘과 컨트롤을 담은 위한 원본 파일을 사용할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -40,9 +39,11 @@ title: 다운로드
   <div class="layout-content-col span-4">
 
 <p>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Fireworks_Stencil_20120229.png">Adobe&#174; Fireworks&#174; PNG Stencil</a>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_OmniGraffle_Stencil_20120229.graffle">Omni&#174; OmniGraffle&#174; Stencil</a>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Holo_Widgets_20120229.zip">Adobe&#174; Photoshop&#174; Sources</a>
+  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_Fireworks_Stencil_20120229.png">Adobe&#174; Fireworks&#174; PNG 스텐실</a>
+  <a class="download-button" href="https://dl-ssl.google.com/android/design/Android_Design_OmniGraffle_Stencil_20120229.graffle">Omni&#174; OmniGraffle&#174; 스텐실</a>
+  <a class="download-button"
+  href="https://dl-ssl.google.com/android/design/Android_Design_Holo_Widgets_20120229.zip">Adobe&#174;
+  Photoshop&#174; 원본 파일</a>
 </p>
 
   </div>
@@ -96,7 +97,9 @@ title: 다운로드
 
 <p>
   <a class="download-button" href="https://dl-ssl.google.com/android/design/Roboto_Hinted_20111129.zip">로보토</a>
-  <a class="download-button" href="https://dl-ssl.google.com/android/design/Roboto_Specimen_Book_20111129.pdf">Specimen Book</a>
+  <a class="download-button"
+  href="https://dl-ssl.google.com/android/design/Roboto_Specimen_Book_20111129.pdf">견본
+  책</a>
 </p>
 
   </div>
@@ -108,7 +111,7 @@ title: 다운로드
 
 <h4>색</h4>
 <p>푸른색은 안드로이드 색 팔레트의 표준 강조 색입니다. 필요할 때 보완적으로 사용할 수 있게끔 제각각의 색에 대해 어두운 그림자색이 있습니다.</p>
-<p><a href="../style/color.html">색에 대한 더 많은 내용 보기</a></p>
+<p><a href="../style/color.html">색에 대한 더 보기</a></p>
 
   </div>
   <div class="layout-content-col span-4">
@@ -119,8 +122,8 @@ title: 다운로드
 
 <p>
   <a class="download-button"
-  href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">색상에
-  대해 더 보기</a>
+  href="https://dl-ssl.google.com/android/design/Android_Design_Color_Swatches_20120229.zip">색상
+  견본</a>
 </p>
 
   </div>
