--- a/patterns/pure-android.html
+++ b/patterns/pure-android.html
@@ -1,13 +1,8 @@
 ---
 layout: default
-title: Pure Android
+title: 순수한 안드로이드
 ---
-<p>Most developers want to distribute their apps on multiple platforms. As you plan your app for
-Android, keep in mind that different platforms play by different rules and conventions. Design
-decisions that make perfect sense on one platform will look and feel misplaced in the context of a
-different platform. While a "design once, ship anywhere" approach might save you time up-front, you
-run the very real risk of creating inconsistent apps that alienate users. Consider the following
-guidelines to avoid the most common traps and pitfalls.</p>
+<p>대부분의 개발자는 앱을 여러 플랫폼에 배포하고 싶어 합니다. 안드로이드 앱을 준비하실 때, 서로 다른 플랫폼은 서로 다른 규칙과 관례를 따른다는 것을 고려하십시오. 어느 한 플랫폼에서 완벽히 들어맞는 디자인이라도 다른 플랫폼의 문맥상에서는 모양새와 느낌이 잘 맞지 않을 수 있습니다. "한번만 디자인하고, 어디나 배포하는" 방식이 일단은 시간을 절약해 줄지도 모르지만, 일관성이 떨어져 사용자들이 어색하게 느끼는 앱을 만들게 되는, 현실적인 위험을 감수하는 것입니다. 아래의 지침을 고려하시어, 흔히 빠지게 되는 함정과 실수를 피해 가세요.</p>
 
 
 <div class="vspace size-1">&#160;</div>
@@ -16,25 +11,14 @@ guidelines to avoid the most common traps and pitfalls.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>Don't mimic UI elements from other platforms</h4>
-<p>Platforms typically provide a carefully designed set of UI elements that are themed in a very
-distinctive fashion. For example, some platforms advocate rounded corners for their buttons, others
-use gradients in their title bars. In some cases, elements may have the same purpose, but are
-designed to work a bit differently.</p>
-<p>As you build your app for Android, don't carry over themed UI elements from other platforms and
-don't mimic their specific behaviors. Review the
-<a href="../building-blocks/index.html">Building Blocks</a>
-section in this styleguide to learn about Android's most important UI elements
-and the way they look in the system default themes. Also examine Android's platform apps to get a
-sense of how elements are applied in the context of an app. If you want to customize the theme of UI
-elements, customize carefully according to your specific branding - and not according to the
-conventions of a different platform.</p>
+<h4>다른 플랫폼의 UI 요소를 흉내 내지 말 것</h4>
+<p>안드로이드 앱을 만드실 때, 다른 플랫폼의 테마를 가진 UI 요소를 그대로 가져오거나 그들의 특정한 동작을 흉내 내려 하지 마십시오. 이 스타일 안내서의 <a href="../building-blocks/index.html">Building Blocks</a> 부분을 검토하여, 안드로이드의 주요 UI 요소에는 어떤 것이 있고 시스템 기본 테마에서 어떤 모양인지 알아보세요. 또한 안드로이드 플랫폼에 제공되는 앱을 참고해서 그러한 요소들이 앱에 어떤 방식으로 적용되어 있는지 감을 잡으세요. UI 요소를 입맛에 맞게 고치실 때는 다른 플랫폼의 관례를 따르는 것이 아니라, 여러분의 브랜딩에 맞추어 조심스럽게 하십시오.</p>
 
   </div>
   <div class="layout-content-col span-8">
 
     <img src="../media/migrating_ui_elements.png"><div class="figure-caption">
-      Sampling of UI elements from Android, iOS and Windows Phone 7.
+      안드로이드와 iOS, 윈도우 폰 7의 UI 요소들.
     </div>
 
   </div>
@@ -47,18 +31,16 @@ conventions of a different platform.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>Don't carry over platform-specific icons</h4>
-<p>Platforms typically provide sets of icons for common functionality, such as sharing, creating a new
-document or deleting.</p>
-<p>As you are migrating your app to Android, please swap out platform-specific icons with their Android
-counterparts.</p>
-<p>You can find a wide variety of icons for use in your app in the Android SDK.</p>
+<h4>플랫폼 제공 아이콘을 그대로 가져오지 말 것</h4>
+<p>각 플랫폼마다 공유, 새 문서, 삭제 등 자주 사용되는 기능을 표현한 아이콘을 제공합니다.</p>
+<p>안드로이드로 앱을 이식할 때, 플랫폼 제공 아이콘을 그에 대응되는 안드로이드 제공 아이콘으로 바꾸십시오.</p>
+<p>안드로이드 SDK에서 앱에 사용할 수 있는 다양한 아이콘을 찾을 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-8">
 
     <img src="../media/migrating_icons.png"><div class="figure-caption">
-      Sampling of icons from Android, iOS and Windows Phone 7.
+      안드로이드와 iOS, 윈도우 폰 7의 아이콘들.
     </div>
 
   </div>
@@ -71,20 +53,16 @@ counterparts.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>Don't use bottom tab bars</h4>
-<p>Other platforms use the bottom tab bar to switch between the app's views. Per platform convention,
-Android's tabs for view control are shown in action bars at the top of the screen instead. In
-addition, Android apps may use a bottom bar to display actions on a split action bar.</p>
-<p>You should follow this guideline to create a consistent experience with other apps on the Android
-platform and to avoid confusion between actions and view switching on Android.</p>
-<p>For more information on how to properly use action bars for view control, see
-<a href="actionbar.html">Action Bars</a>.</p>
+<h4>탭 바를 화면 하단에 두지 말 것</h4>
+<p>다른 플랫폼에서는 앱의 여러 뷰 사이를 전환하기 위해 하단 탭 바를 사용합니다. 플랫폼 관례에 따라 안드로이드의 탭은 화면 위쪽의 액션 바에 표시됩니다. 추가로, 분리된 액션 바에 액션을 표시하기 위해 하단 바를 사용할 수도 있습니다.</p>
+<p>안드로이드 플랫폼의 다른 앱들과 일관성 있는 경험을 위해, 또한 뷰 전환과 액션을 혼동하지 않도록 하기 위해서 반드시 이 지침을 따르셔야 합니다.</p>
+<p>뷰 전환을 위해 액션 바를 올바르게 사용하는 방법은 <a href="actionbar.html">액션 바</a>에서 보실 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-8">
 
     <img src="../media/migrating_ios_dialers.png"><div class="figure-caption">
-      Android dialer with tabs in an action bar vs. bottom tabs in iOS.
+      액션 바에 탭이 있는 안드로이드 전화 걸기와 iOS 하단 탭 비교.
     </div>
 
   </div>
@@ -94,18 +72,15 @@ platform and to avoid confusion between actions and view switching on Android.</
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>Don't use labeled back buttons on action bars</h4>
-<p>Other platforms use an explicit back button with label to allow the user to navigate up the
-application's hierarchy. Instead, Android uses the main action bar's app icon for hierarchical
-navigation and the navigation bar's back button for temporal navigation. For more information,
-please review the <a href="navigation.html">Navigation</a> pattern.</p>
-<p>Follow this guideline to provide a consistent navigation experience across the platform.</p>
+<h4>액션 바의 뒤로 가기 버튼에 레이블을 달지 말 것</h4>
+<p>다른 플랫폼에서는 사용자가 애플리케이션의 상위 계층으로 이동할 수 있도록 하기 위해 레이블이 붙은 명시적인 뒤로 가기 버튼을 사용합니다. 안드로이드에서는 그와 달리, 상위 계층으로 이동할 때는 주 액션 바의 앱 아이콘을, 일시적인 이동을 할 때는 네비게이션 바의 뒤로 가기 버튼을 사용합니다. 자세한 내용은 <a href="navigation.html">네비게이션</a> 패턴을 참고하세요.</p>
+<p>플랫폼 전반에서 일관성 있는 네비게이션 경험을 제공할 수 있도록 이 지침을 따르십시오.</p>
 
   </div>
   <div class="layout-content-col span-8">
 
     <img src="../media/migrating_ios_galleries.png"><div class="figure-caption">
-      Android action bar with up caret vs. iOS labeled "Back" button.
+      상위 표시가 달린 안드로이드 액션 바와 레이블이 붙은 iOS "뒤로 가기" 버튼 비교.
     </div>
 
   </div>
@@ -115,29 +90,25 @@ please review the <a href="navigation.html">Navigation</a> pattern.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
-<h4>Don't use right-pointing carets on line items</h4>
-<p>A common pattern on other platforms is the display of right-pointing carets on line items that allow
-the user to drill deeper into additional content.</p>
-<p>Android does not use such indicators on drill-down line items. Avoid them to stay consistent with
-the platform and in order to not have the user guess as to what the meaning of those carets may be.</p>
+<h4>줄 항목 끝에 오른쪽 표시를 달지 말 것</h4>
+<p>다른 플랫폼에서는 추가 내용을 볼 수 있는 경우 줄 항목 끝에 오른쪽 표시를 다는 패턴이 자주 사용됩니다.</p>
+<p>안드로이드에서는 드릴 다운 줄 항목에 그러한 표식을 사용하지 않습니다. 플랫폼과의 일관성을 유지하도록, 또한 사용자가 그 표식이 무엇을 뜻하는 지 추측할 필요 없도록 사용을 피하세요.</p>
 
   </div>
   <div class="layout-content-col span-8">
 
     <img src="../media/migrating_ios_settings.png"><div class="figure-caption">
-      Android settings without right-pointing carets in line items vs. iOS settings.
+      줄 항목 끝에 오른쪽 표시가 없는 안드로이드 설정 화면과 iOS 설정 화면 비교.
     </div>
 
   </div>
 </div>
 
 
-<h2 id="device-independence">Device Independence</h2>
+<h2 id="device-independence">장치 독립성</h2>
 
 
-<p>Remember that your app will run on a wide variety of different screen sizes. Create visual assets
-for different screen sizes and densities and make use of concepts such as multi-pane layouts to
-appropriately scale your UI on different device form factors.</p>
+<p>여러분의 앱이 여러 가지 서로 다른 크기의 화면에 표시된다는 것을 잊지 마세요. 다른 크기와 밀도를 가진 화면에 맞도록 비주얼 애셋을 만들고, 장치 형태에 따라 UI 크기가 적절하게 조정될 수 있도록 multi-pane layout 등의 개념을 적용하십시오.</p>
 
-<p>For more information, read <a href="../style/devices-displays.html">Devices and Displays</a> as
-well as <a href="multi-pane-layouts.html">Multi-pane Layouts</a> in this design guide.</p>
+<p>자세한 내용은 이 디자인 지침서의 <a href="../style/devices-displays.html">Devices and Displays</a>와
+<a href="multi-pane-layouts.html">Multi-pane Layouts</a>를 참고하세요.</p>
