actionbar.html 의 일부를 번역했습니다. 웹에서 했더니 우분투의 IME의 문제로 계속 진행하기 어렵네요.

--- a/patterns/actionbar.html
+++ b/patterns/actionbar.html
@@ -1,13 +1,12 @@
 ---
 layout: default
-title: Action Bar
+title: 액션 바 
 ---
 <img src="../media/action_bar_pattern_overview.png">
-<p>The <em>action bar</em> is arguably the most important structural element of an Android app. It's a
-dedicated piece of real estate at the top of each screen that is generally persistent throughout the
-app.</p>
+<p><em>액션 바</em>가 안드로이드 앱의 가장 중요한 구조 요소라는 것은 대부분 동의합니다.
+액션바는 대게 앱을 사용하는 동안 영속적으로 화면 상단 지역에 위치합니다.</p>
 
-<p><strong>The main purpose of the action bar is to</strong>:</p>
+<p><strong>액션 바의 주 용도는 아래와 같습니다.</strong></p>
 
 <ul>
 <li>Make important actions (such as <em>New</em> or <em>Search</em>, etc) prominent and accessible in a predictable
