제스쳐 부분 완료.

--- a/patterns/gestures.html
+++ b/patterns/gestures.html
@@ -35,13 +35,13 @@ title: 제스쳐
 </div>
   <div class="layout-content-col span-4">
 
-    <img src="../media/gesture_swipe.png"><h4>Swipe</h4>
-<p>Scrolls overflowing content, or navigates between views in the same hierarchy.</p>
+    <img src="../media/gesture_swipe.png"><h4>스와이프</h4>
+<p>넘친 컨텐츠를 스크롤하거나 같은 계층의 뷰 사이를 이동합니다.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>Action</h4>
-    <p>Press, move, lift</p>
+    <h4>행동</h4>
+    <p>누르고, 이동하고, 뗍니다</p>
 </li>
 </ul>
 </div>
@@ -52,37 +52,37 @@ title: 제스쳐
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-    <img src="../media/gesture_drag.png"><h4>Drag</h4>
-<p>Rearranges data within a view, or moves data into a container (e.g. folders on Home Screen).</p>
+    <img src="../media/gesture_drag.png"><h4>드래그</h4>
+<p>뷰 내의 데이터를 재 배열하거나, 컨테이너로 데이터를 옮깁니다. (예, 홈 스크린의 폴더)</p>
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>Action</h4>
-    <p>Long press, move, lift</p>
+    <h4>행동</h4>
+    <p>롱 프레스, 옮기고, 뗍니다</p>
 </li>
 </ul>
 </div>
   <div class="layout-content-col span-4">
 
-    <img src="../media/gesture_doubletouch.png"><h4>Double touch</h4>
-<p>Zooms into content. Also used as a secondary gesture for text selection.</p>
+    <img src="../media/gesture_doubletouch.png"><h4>더블 터치</h4>
+<p>컨텐츠를 확대합니다. 또, 텍스트 선택을 위한 부차 제스쳐로도 사용됩니다.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>Action</h4>
-    <p>Two touches in quick succession</p>
+    <h4>행동</h4>
+    <p>짧게 이어 두번 누릅니다</p>
 </li>
 </ul>
 </div>
   <div class="layout-content-col span-4">
 
-    <img src="../media/gesture_pinchopen.png"><h4>Pinch open</h4>
-<p>Zooms into content.</p>
+    <img src="../media/gesture_pinchopen.png"><h4>핀치 오픈</h4>
+<p>컨텐츠를 확대합니다.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>Action</h4>
-    <p>2-finger press, move outwards, lift</p>
+    <h4>행동/h4>
+    <p>두 손가락으로 누르고, 밖으로 벌리고, 뗍니다</p>
 </li>
 </ul>
 </div>
@@ -93,13 +93,13 @@ title: 제스쳐
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-    <img src="../media/gesture_pinchclose.png"><h4>Pinch close</h4>
-<p>Zooms out of content.</p>
+    <img src="../media/gesture_pinchclose.png"><h4>핀치 클로즈</h4>
+<p>컨텐츠를 축소합니다.</p>
 
 <ul>
 <li class="no-bullet with-icon action">
-    <h4>Action</h4>
-    <p>2-finger press, move inwards, lift</p>
+    <h4>행동</h4>
+    <p>두 손가락으로 누르고, 안으로 옮기고, 뗍니다</p>
 </li>
 </ul>
 </div>
