--- a/patterns/compatibility.html
+++ b/patterns/compatibility.html
@@ -1,28 +1,28 @@
 ---
 layout: default
-title: Backwards Compatibility
+title: 하위 호환성
 ---
-<p>Significant changes in Android 3.0 included:</p>
+<p>Android 3.0 에서 포함된 중요 변경 사항은 다음과 같습니다:</p>
 
 <ul>
-<li>Deprecation of navigation hardware keys (Back, Menu, Search, Home) in favor of handling navigation
-  via virtual controls (Back, Home, Recents).</li>
-<li>Robust pattern for the use of menus in action bars.</li>
+<li>가상 내비게이션 키(Back, Home, 최근 액티비티)의 도입에 따른,
+  하드웨어 내비게이션 키(Back, Menu, Search, Home)의 이용 배제.</li>
+<li>액션바 메뉴를 위한 강력한 패턴.</li>
 </ul>
-<p>Android 4.0 brings these changes for tablets to the phone platform.</p>
+<p>안드로이드 4.0은 태블릿을 위해 도입된 이 사항들을 폰 플랫폼에도 적용했습니다.</p>
 
 
-<h2 id="older-hardware">Adapting Android 4.0 to Older Hardware and Apps</h2>
+<h2 id="older-hardware">이전의 하드웨어와 앱에 안드로이드 4.0 적용하기</h2>
 
 
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<h4>Phones with virtual navigation controls</h4>
-<p>Android apps written for Android 3.0 and later display actions in the action bar. Actions that don't
-fit in the action bar or aren't important enough to be displayed at the top level appear in the
-action overflow.</p>
-<p>Users access the action overflow by touching it in the action bar.</p>
+<h4>가상 내비게이션 키를 갖는 폰</h4>
+<p>안드로이드 3.0 이후 버전을 위해 작성된 안드로이드 앱은 액션바에 메뉴를 표시합니다.
+액션 바가 좁아 다 들어갈 수 없는 메뉴나 꼭 보여져야 할만큼 중요치 않은 메뉴들은
+오버플로 메뉴를 통해 표시됩니다.</p>
+<p>사용자는 액션바에서 오버플로 메뉴를 터치해서 해당 메뉴들에 접근할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
@@ -35,10 +35,10 @@ action overflow.</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<h4>Phones with physical navigation keys</h4>
-<p>Android phones with traditional navigation hardware keys don't display the virtual navigation bar at
-the bottom of the screen. Instead, the action overflow is available from the menu hardware key. The
-resulting actions popup has the same style as in the previous example, but is displayed at the bottom of the screen.</p>
+<h4>하드웨어 내비게이션 키를 갖는 폰</h4>
+<p>기존의 하드웨어 내비게이션 키를 갖는 안드로이드 폰은 화면 하단에 가상 내비게이션 버튼을 표시하지 않습니다.
+대신, 하드웨어 메뉴 버튼을 통해 오버플로 메뉴를 사용할 수 있습니다. 메뉴 버튼을 누르면
+화면의 아래쪽에 표시된다는 점을 제외하면 기존 예와 동일한 스타일의 메뉴가 나타납니다.</p>
 
   </div>
   <div class="layout-content-col span-7">
@@ -51,10 +51,10 @@ resulting actions popup has the same style as in the previous example, but is di
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
 
-<h4>Legacy apps on phones with virtual navigation controls</h4>
-<p>When you run an app that was built for Android 2.3 or earlier on a phone with virtual navigation
-controls, an action overflow control appears at the right side of the virtual navigation bar. You
-can touch the control to display the app's actions in the traditional Android menu styling.</p>
+<h4>가상 내비게이션 키를 갖는 폰에서의 기존 앱</h4>
+<p>안드로이드 2.3 이전 버전에서 만들어진 앱을 가상 내비게이션 키를 갖는 폰에서 실행한다면,
+오버플로 메뉴는 가상 내비게이션 바의 오른쪽에 나타납니다.
+해당 메뉴를 터치하면 기존 안드로이드 메뉴 스타일의 메뉴를 표시합니다.
 
   </div>
   <div class="layout-content-col span-7">
