style/themes.html 번역
issue #15

--- a/style/themes.html
+++ b/style/themes.html
@@ -1,40 +1,39 @@
 ---
 layout: default
-title: Themes
+title: 테마
 ---
 <div class="layout-content-row">
   <div class="layout-content-col span-5">
 
     <img src="../media/themes_holo_light.png"><div class="figure-caption">
-      Gmail in Holo Light.
+      Holo Light 테마의 Gmail.
     </div>
 
     <img src="../media/themes_holo_dark.png"><div class="figure-caption">
-      Settings in Holo Dark.
+      Holo Dark 테마의 Settings.
     </div>
 
     <img src="../media/themes_holo_inverse.png"><div class="figure-caption">
-      Talk in Holo Light with dark action bar.
+      Holo Light with dark action bars 테마의 Talk.
     </div>
 
   </div>
   <div class="layout-content-col span-7">
 
-<p>Themes are Android's mechanism for applying a consistent style to an app or activity. The style
-specifies the visual properties of the elements that make up your user interface, such as color,
-height, padding and font size. To promote greater cohesion between all apps on the platform, Android
-provides three system themes that you can choose from when building apps for Ice Cream Sandwich:</p>
+<p>테마는 앱이나 액티비티에 일관된 스타일을 적용할 수 있도록 안드로이드가 제공하는 기능입니다.
+스타일은 화면을 구성하는 각 요소의 색깔, 높이, 여백, 폰트 크기와 같은, 외관에 관한 속성들을 지정 할 수 있습니다.
+플랫폼 상의 모든 앱이 플랫폼과 일관적이고 단결된 모습으로 보일 수 있도록, 안드로이드는 아이스크림 샌드위치
+이상 버전에서 개발중인 앱이라면 다음 세개의 테마를 제공합니다:</p>
 <ul>
 <li>Holo Light</li>
 <li>Holo Dark</li>
 <li>Holo Light with dark action bars</li>
 </ul>
-<p>Applying these themes will go a long way in helping you to build apps that fit right into the
-general visual language of Android.</p>
-<p>Pick the system theme that best matches the needs and design aesthetics for your app. If your
-desire is to have a more distinct look for your app, using one of the system themes as a starting
-point for your customizations is a good idea. The system themes provide a solid foundation on top
-of which you can selectively implement your own visual stylings.</p>
+<p>이 테마들을 적용하는 것은 안드로이드의 일반적 외관에 딱 어울리는 앱을 개발하는 데 큰 도움이 될 겁니다.</p>
+<p>앱의 필요와 디자인 미학에 가장 적합한 시스템 테마를 선택하세요.
+좀 더 특화된, 자신만의 개성적인 외관의 앱을 개발하고자 할때도, 시스템 테마 중 하나를
+특화된 UI 개발의 시작점으로 삼는 것이 좋은 방법입니다.
+시스템 테마는 선택적으로 특정 부분만 원하는 대로 변경해서 사용할 수 있는 탄탄한 토대를 제공하기 때문입니다.</p>
 
   </div>
 </div>
