실제 앱 이름에 맞추어 변경.

--- a/style/themes.html
+++ b/style/themes.html
@@ -6,15 +6,15 @@ title: 테마
   <div class="layout-content-col span-5">
 
     <img src="../media/themes_holo_light.png"><div class="figure-caption">
-      Holo Light 테마의 Gmail.
+      Holo Light 테마가 적용된 Gmail.
     </div>
 
     <img src="../media/themes_holo_dark.png"><div class="figure-caption">
-      Holo Dark 테마의 Settings.
+      Holo Dark 테마가 적용된 설정.
     </div>
 
     <img src="../media/themes_holo_inverse.png"><div class="figure-caption">
-      Holo Light with dark action bars 테마의 Talk.
+      다크 액션바(dark action bar)에 Holo Light 테마가 적용된 토크.
     </div>
 
   </div>
