Settings, Talk > 설정, 토크

--- a/style/themes.html
+++ b/style/themes.html
@@ -10,11 +10,11 @@ title: 테마
     </div>
 
     <img src="../media/themes_holo_dark.png"><div class="figure-caption">
-      Holo Dark 테마의 Settings.
+      Holo Dark 테마의 설정.
     </div>
 
     <img src="../media/themes_holo_inverse.png"><div class="figure-caption">
-      Holo Light with dark action bars 테마의 Talk.
+      Holo Light with dark action bars 테마의 토크.
     </div>
 
   </div>
