building-blocks/buttons.html 번역.

--- a/building-blocks/buttons.html
+++ b/building-blocks/buttons.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Buttons
+title: 버튼
 ---
-<p>A button consists of text and/or an image that clearly communicates what action will occur when the
-user touches it. Android supports two different types of buttons: <em>basic buttons</em> and <em>borderless
-buttons</em>. Both can contain text labels and/or images.</p>
+<p>텍스트 및/혹은 이미지로 구성되는 버튼은 사용자가 터치했을 때 어떤 동작이 일어날지 알기 쉽게 전달해줍니다.
+안드로이드는 <em>기본 버튼</em> 및 <em>무테 버튼</em>이라는 두가지 타입의 버튼을 지원합니다.
+둘다 텍스트 라벨 및/혹은 이미지를 포함시킬 수 있습니다.</p>
 
 
 <div style="text-align: center">
@@ -12,37 +12,37 @@ buttons</em>. Both can contain text labels and/or images.</p>
 </div>
 
 
-<h2 id="basic">Basic Buttons</h2>
+<h2 id="basic">기본 버튼(Basic Buttons)</h2>
 
 
-<p>Basic buttons are traditional buttons with borders and background. Android supports two styles for
-basic buttons: default and small. Default buttons have slightly larger font size and are optimized
-for display outside of form content. Small buttons are intended for display alongside other content.
-They have a smaller font and smaller minimum height. Use small buttons in forms where they need to
-align with other UI elements.</p>
+<p>기본 버튼은 테두리와 배경을 가진 전통적인 버튼입니다. 안드로이드는 기본 크기 및 작은 크기의 두가지 스타일의 기본 버튼을 지원합니다.
+기본 크기 버튼은 약간 큰 글꼴 크기로 컨텐츠 양식 외부에 표시되는 것에 최적화되어 있습니다.
+작은 크기 버튼은 다른 컨텐츠와 함께 표시하기 위한 것입니다.
+작은 크기 버튼은 더 작은 글꼴 크기와 더 작은 최소 높이로 구성되어 있습니다.
+따라서 다른 UI 요소와 함께 정렬되어야 할 곳에 작은 크기 버튼을 사용해주세요.</p>
 
 
 <img src="../media/buttons_default_small.png">
 <div class="layout-content-row">
   <div class="layout-content-col span-6">
     <div class="figure-caption">
-      Default buttons in Holo Dark &amp; Light.
+      Holo Dark 및 Light의 기본 크기 버튼.
     </div>
   </div>
   <div class="layout-content-col span-6">
     <div class="figure-caption">
-      Small buttons in Holo Dark &amp; Light.
+      Holo Dark 및 Light의 작은 크기 버튼.
     </div>
   </div>
 </div>
 
 
-<h2 id="borderless">Borderless Buttons</h2>
+<h2 id="borderless">무테 버튼(Borderless Buttons)</h2>
 
 
-<p>Borderless buttons resemble basic buttons except that they have no borders or background. You can
-use borderless buttons with both icons and text. Borderless buttons are visually more lightweight
-than basic buttons and integrate nicely with other content.</p>
+<p>무테 버튼은 테두리 및 배경이 없다는 점을 제외하고는 기본 버튼과 흡사합니다.
+따라서 아이콘과 텍스트과 함께 무테 버튼을 사용할 수 있습니다.
+무테 버튼은 시각적으로 기본 버튼보다 더 경량이므로 다른 컨텐트와 함께 멋지게 통합될 수 있습니다.</p>
 
 
 <img src="../media/buttons_borderless.png">
